change banner and images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
   <header class="site-header sticky-top">
   <nav class="navbar navbar-expand-lg">
     <div class="container">
@@ -42,7 +41,6 @@
     </div>
   </nav>
 </header>
-
   <main>
     <section id="home" class="hero-section">
       <div class="container">
@@ -63,14 +61,14 @@
           </div>
           <div class="col-lg-6 text-center">
             <div class="hero-image-wrap">
-              <img src="images/hero-machine.png" alt="Spring Forming Machine" class="hero-image" />
+              <img src="images/safron.png" alt="Spring Forming Machine" class="hero-image" />
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="categories" class="section d-none">
+    <section id="categories" class="section">
       <div class="container">
         <div class="section-header text-center">
           <h2>Categories</h2>
