make change and make client and service section

--- a/index.html
+++ b/index.html
@@ -133,17 +133,22 @@
       </div>
     </section>
 
-    <section id="about" class="section about-section d-none">
+    <section id="about" class="section about-section">
       <div class="container">
         <div class="row align-items-center g-5">
           <div class="col-lg-6">
             <div class="about-image">
-              <img src="images/hero-bg.jpg" alt="Factory" />
+              <img src="images/factory.png" alt="Factory" />
             </div>
           </div>
           <div class="col-lg-6">
             <h2>About Us</h2>
-            <p>We are a trusted manufacturer and supplier of spring manufacturing machines, delivering high-performance solutions tailored to your production needs.</p>
+            <p>Saffron International is a professional company of high precision machinery products supply, 
+based in Delhi, India, founded with a solid foundation in the industrial machinery sector in the 
+past 18 years. We have established a professional, mature and reliable system to source and 
+supply all kinds of forging equipment products; based on it, it is set up with the pre-sale, in-the
+sale and after-sale service systems for products with the guarantee of sincere service and 
+professional technologies.</p>
             <ul class="about-list">
               <li>Decades of engineering expertise</li>
               <li>Client-first service and support</li>
@@ -155,7 +160,7 @@
       </div>
     </section>
 
-    <section id="services" class="section d-none">
+    <section id="services" class="section">
       <div class="container">
         <div class="section-header text-center">
           <h2>Services</h2>
@@ -208,7 +213,7 @@
       </div>
     </section>
 
-    <section id="why" class="section why-section d-none">
+    <section id="why" class="section why-section">
       <div class="container">
         <div class="section-header text-center">
           <h2>Why Choose Us</h2>
@@ -247,7 +252,7 @@
       </div>
     </section>
 
-    <section class="section clients-section d-none">
+    <section class="section clients-section">
       <div class="container">
         <div class="section-header text-center">
           <h2>Our Clients</h2>
@@ -255,11 +260,14 @@
         </div>
         <div class="logo-slider">
           <div class="logo-track" id="logoTrack">
-            <img src="images/clients/client-1.png" alt="Client Logo" />
-            <img src="images/clients/client-2.png" alt="Client Logo" />
-            <img src="images/clients/client-3.png" alt="Client Logo" />
-            <img src="images/clients/client-4.png" alt="Client Logo" />
-            <img src="images/clients/client-5.png" alt="Client Logo" />
+            <img src="images/clients/1.png" alt="Client Logo" />
+            <img src="images/clients/2.png" alt="Client Logo" />
+            <img src="images/clients/3.png" alt="Client Logo" />
+            <img src="images/clients/4.png" alt="Client Logo" />
+            <img src="images/clients/5.png" alt="Client Logo" />
+            <img src="images/clients/6.png" alt="Client Logo" />
+            <img src="images/clients/7.png" alt="Client Logo" />
+            <img src="images/clients/8.png" alt="Client Logo" />
           </div>
         </div>
       </div>
@@ -365,7 +373,9 @@
       <div class="row g-4">
         <div class="col-lg-4">
           <h5>Shri Shyama Super Services</h5>
-          <p>Trusted manufacturer and supplier of spring manufacturing machines with quality, precision, and efficiency.</p>
+          <p>We will develop to be a leading supplier enterprise in the industry, based in Delhi, India with 
+openness and confidence and steady development.
+</p>
           <a href="#contact" class="btn btn-primary btn-sm">Get in Touch</a>
         </div>
         <div class="col-lg-2 col-md-4">
