make change new make

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <div class="nav-contact d-none d-lg-flex align-items-center">
-          <span class="contact-label">Download</span>
           <a href="https://saffroninternational.in/pdf/Catalog.pdf" class="contact-phone" download>
             <i class="fa-solid fa-file-pdf"></i> Brochure
           </a>
@@ -47,7 +46,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <span class="hero-kicker">Precision Engineering</span>
-            <h1 class="hero-title">Spring Forming Machines Built for Performance</h1>
+            <h1 class="hero-title">SAFFRON INTERNATIONAL</h1>
             <p class="hero-subtitle">Trusted manufacturer and supplier delivering quality, precision, and efficiency for all your machinery needs.</p>
             <div class="hero-actions">
               <a href="#contact" class="btn btn-primary btn-hero">Get in Touch</a>
@@ -142,20 +141,20 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h2>About Us</h2>
-            <p>Saffron International is a professional company of high precision machinery products supply, 
-based in Delhi, India, founded with a solid foundation in the industrial machinery sector in the 
-past 18 years. We have established a professional, mature and reliable system to source and 
-supply all kinds of forging equipment products; based on it, it is set up with the pre-sale, in-the
-sale and after-sale service systems for products with the guarantee of sincere service and 
-professional technologies.</p>
-            <ul class="about-list">
-              <li>Decades of engineering expertise</li>
-              <li>Client-first service and support</li>
-              <li>Comprehensive training and setup</li>
-            </ul>
-            <a href="#contact" class="btn btn-primary">Request a Quote</a>
-          </div>
+    <h2>About Us</h2>
+    <p>Saffron International is a professional company of high precision machinery products supply,
+      based in Delhi, India, founded with a solid foundation in the industrial machinery sector in the
+      past 18 years. We have established a professional, mature and reliable system to source and
+      supply all kinds of forging equipment products; based on it, it is set up with the pre-sale, in-the
+      sale and after-sale service systems for products with the guarantee of sincere service and
+      professional technologies.</p>
+    <ul class="about-list">
+      <li>Decades of engineering expertise</li>
+      <li>Client-first service and support</li>
+      <li>Comprehensive training and setup</li>
+    </ul>
+    <a href="#contact" class="btn btn-primary">Request a Quote</a>
+  </div>
         </div>
       </div>
     </section>
@@ -272,7 +271,6 @@ professional technologies.</p>
         </div>
       </div>
     </section>
-
     <section id="testimonials" class="section testimonials-section d-none">
       <div class="container">
         <div class="section-header text-center">
@@ -373,9 +371,9 @@ professional technologies.</p>
       <div class="row g-4">
         <div class="col-lg-4">
           <h5>Shri Shyama Super Services</h5>
-          <p>We will develop to be a leading supplier enterprise in the industry, based in Delhi, India with 
-openness and confidence and steady development.
-</p>
+          <p>We will develop to be a leading supplier enterprise in the industry, based in Delhi, India with
+            openness and confidence and steady development.
+          </p>
           <a href="#contact" class="btn btn-primary btn-sm">Get in Touch</a>
         </div>
         <div class="col-lg-2 col-md-4">
