--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       </div>
     </section>
 
-    <section id="contact" class="section contact-section d-none">
+    <section id="contact" class="section contact-section">
       <div class="container">
         <div class="row align-items-center g-4">
           <div class="col-lg-6">
