--- a/index.html
+++ b/index.html
@@ -78,53 +78,62 @@
             <div class="card category-card">
               <div class="card-body">
                 <div class="icon-circle"><i class="fa-solid fa-gear"></i></div>
-                <h5 class="card-title">CNC Spring Machines</h5>
-                <p class="card-text">High-speed CNC systems with precise control and rapid setup.</p>
+                <h5 class="card-title">Spring Forming Machines</h5>
+                <p class="card-text">High-speed spring forming with consistent pitch, diameter, and output.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card category-card">
               <div class="card-body">
-                <div class="icon-circle"><i class="fa-solid fa-industry"></i></div>
-                <h5 class="card-title">Wire Forming</h5>
-                <p class="card-text">Flexible forming options for complex wire shapes and sizes.</p>
+                <div class="icon-circle"><i class="fa-solid fa-share-nodes"></i></div>
+                <h5 class="card-title">Wire Bending Machines</h5>
+                <p class="card-text">Accurate bends for complex wire shapes with fast setup and repeatability.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card category-card">
               <div class="card-body">
-                <div class="icon-circle"><i class="fa-solid fa-sliders"></i></div>
-                <h5 class="card-title">Precision Tooling</h5>
-                <p class="card-text">Durable tooling with tight tolerances for consistent output.</p>
+                <div class="icon-circle"><i class="fa-solid fa-arrows-rotate"></i></div>
+                <h5 class="card-title">Coiling Machines</h5>
+                <p class="card-text">Stable coiling performance for uniform coils across multiple wire sizes.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card category-card">
               <div class="card-body">
-                <div class="icon-circle"><i class="fa-solid fa-bolt"></i></div>
-                <h5 class="card-title">Automation</h5>
-                <p class="card-text">Integrated automation modules for higher throughput.</p>
+                <div class="icon-circle"><i class="fa-solid fa-screwdriver-wrench"></i></div>
+                <h5 class="card-title">Special Purpose Machines</h5>
+                <p class="card-text">Custom-built machines engineered for unique production requirements.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card category-card">
               <div class="card-body">
-                <div class="icon-circle"><i class="fa-solid fa-shield"></i></div>
-                <h5 class="card-title">Quality Assurance</h5>
-                <p class="card-text">Advanced inspection and calibration systems.</p>
+                <div class="icon-circle"><i class="fa-solid fa-circle-notch"></i></div>
+                <h5 class="card-title">Grinding Machines / Grinding Wheels</h5>
+                <p class="card-text">Precision grinding solutions for smooth finishes and tight tolerances.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card category-card">
               <div class="card-body">
-                <div class="icon-circle"><i class="fa-solid fa-toolbox"></i></div>
-                <h5 class="card-title">Spare Parts</h5>
-                <p class="card-text">Genuine parts with fast delivery and expert support.</p>
+                <div class="icon-circle"><i class="fa-solid fa-fire-flame-curved"></i></div>
+                <h5 class="card-title">Furnace Machines</h5>
+                <p class="card-text">Reliable heat treatment systems for consistent hardness and strength.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card category-card">
+              <div class="card-body">
+                <div class="icon-circle"><i class="fa-solid fa-microchip"></i></div>
+                <h5 class="card-title">Controllers</h5>
+                <p class="card-text">Smart control panels for precise operations and easy monitoring.</p>
               </div>
             </div>
           </div>
