add dropdown of products

--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#categories">Products</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#categories" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Products
+            </a>
+            <ul class="dropdown-menu product-dropdown">
+              <li><a class="dropdown-item" href="#categories">Spring Forming Machines</a></li>
+              <li><a class="dropdown-item" href="#categories">Wire Bending Machines</a></li>
+              <li><a class="dropdown-item" href="#categories">Coiling Machines</a></li>
+              <li><a class="dropdown-item" href="#categories">Special Purpose Machines</a></li>
+              <li><a class="dropdown-item" href="#categories">Grinding Machines / Grinding Wheels</a></li>
+              <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
+              <li><a class="dropdown-item" href="#categories">Controllers</a></li>
+            </ul>
+          </li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
