make chanege in make category page for forming machine

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               Products
             </a>
             <ul class="dropdown-menu product-dropdown">
-              <li><a class="dropdown-item" href="#categories">Spring Forming Machines</a></li>
+              <li><a class="dropdown-item" href="spring-forming-machines.html">Spring Forming Machines</a></li>
               <li><a class="dropdown-item" href="#categories">Wire Bending Machines</a></li>
               <li><a class="dropdown-item" href="#categories">Coiling Machines</a></li>
               <li><a class="dropdown-item" href="#categories">Special Purpose Machines</a></li>
