--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -77,6 +77,7 @@
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/1.png" class="card-img-top product-card-image" alt="CNC Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">CNC Spring Forming Machine</h5>
                 <p class="card-text">Model: SI-20 F, SI-35F</p>
@@ -89,6 +90,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/2.png" class="card-img-top product-card-image" alt="CNC Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">CNC Spring Forming Machine</h5>
                 <p class="card-text">Model: SI-25FR, SI-45 FR</p>
@@ -101,6 +103,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/3.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1025</p>
@@ -113,6 +116,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/4.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1225R</p>
@@ -125,6 +129,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/5.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1265R</p>
@@ -137,6 +142,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/6.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-525R</p>
@@ -149,6 +155,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
+              <img src="images/forming-machine/7.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
               <div class="card-body">
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-20</p>
