make one deatil page for cnc forming machine

--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -82,7 +82,7 @@
                 <h5 class="card-title">CNC Spring Forming Machine</h5>
                 <p class="card-text">Model: SI-20 F, SI-35F</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring%20-forming/cnc-spring-forming-si-20f-si-35f.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
