make second cnc formang machine deatil page

--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -95,7 +95,7 @@
                 <h5 class="card-title">CNC Spring Forming Machine</h5>
                 <p class="card-text">Model: SI-25FR, SI-45 FR</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring%20-forming/cnc-spring-forming-si-25fr-si-45fr.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
