make deatl page 1265r for spring forming machine

--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -121,7 +121,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1225R</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring%20-forming/spring-forming-machine-sfi-1225r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-1265R</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring%20-forming/spring-forming-machine-sfi-1265r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
