make deatl page

--- a/spring-forming-machines.html
+++ b/spring-forming-machines.html
@@ -160,7 +160,7 @@
                 <h5 class="card-title">Spring Forming Machine</h5>
                 <p class="card-text">Model: SFI-20</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="spring%20-forming/spring-forming-machine-sfi-20.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
