make add two complete category spring forming machine and wire bending machine

--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saffron International</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header class="site-header sticky-top">
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#home">
-        <img src="images/Saffron.jpg" alt="Company Logo" class="logo" />
-        <span class="brand-text ms-2">Saffron International</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#categories" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Products
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand d-flex align-items-center" href="#home">
+          <img src="images/Saffron.jpg" alt="Company Logo" class="logo" />
+          <span class="brand-text ms-2">Saffron International</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+          aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainNav">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#categories" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Products
+              </a>
+              <ul class="dropdown-menu product-dropdown">
+                <li><a class="dropdown-item" href="spring-forming-machines.html">Spring Forming Machines</a></li>
+                <li><a class="dropdown-item" href="wire-bending-machines.html">Wire Bending Machines</a></li>
+                <li><a class="dropdown-item" href="#categories">Coiling Machines</a></li>
+                <li><a class="dropdown-item" href="#categories">Special Purpose Machines</a></li>
+                <li><a class="dropdown-item" href="#categories">Grinding Machines / Grinding Wheels</a></li>
+                <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
+                <li><a class="dropdown-item" href="#categories">Controllers</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          </ul>
+          <div class="nav-contact d-none d-lg-flex align-items-center">
+            <a href="https://saffroninternational.in/pdf/Catalog.pdf" class="contact-phone" download>
+              <i class="fa-solid fa-file-pdf"></i> Brochure
             </a>
-            <ul class="dropdown-menu product-dropdown">
-              <li><a class="dropdown-item" href="spring-forming-machines.html">Spring Forming Machines</a></li>
-              <li><a class="dropdown-item" href="#categories">Wire Bending Machines</a></li>
-              <li><a class="dropdown-item" href="#categories">Coiling Machines</a></li>
-              <li><a class="dropdown-item" href="#categories">Special Purpose Machines</a></li>
-              <li><a class="dropdown-item" href="#categories">Grinding Machines / Grinding Wheels</a></li>
-              <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
-              <li><a class="dropdown-item" href="#categories">Controllers</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
-        <div class="nav-contact d-none d-lg-flex align-items-center">
-          <a href="https://saffroninternational.in/pdf/Catalog.pdf" class="contact-phone" download>
-            <i class="fa-solid fa-file-pdf"></i> Brochure
-          </a>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
   <main>
     <section id="home" class="hero-section">
       <div class="container">
@@ -60,7 +63,8 @@
           <div class="col-lg-6">
             <span class="hero-kicker">Precision Engineering</span>
             <h1 class="hero-title">SAFFRON INTERNATIONAL</h1>
-            <p class="hero-subtitle">Trusted manufacturer and supplier delivering quality, precision, and efficiency for all your machinery needs.</p>
+            <p class="hero-subtitle">Trusted manufacturer and supplier delivering quality, precision, and efficiency for
+              all your machinery needs.</p>
             <div class="hero-actions">
               <a href="#contact" class="btn btn-primary btn-hero">Get in Touch</a>
               <a href="#services" class="btn btn-outline-secondary btn-hero-outline">Explore Services</a>
@@ -163,24 +167,23 @@
             </div>
           </div>
           <div class="col-lg-6">
-    <h2>About Us</h2>
-    <p>Saffron International is a professional company of high precision machinery products supply,
-      based in Delhi, India, founded with a solid foundation in the industrial machinery sector in the
-      past 18 years. We have established a professional, mature and reliable system to source and
-      supply all kinds of forging equipment products; based on it, it is set up with the pre-sale, in-the
-      sale and after-sale service systems for products with the guarantee of sincere service and
-      professional technologies.</p>
-    <ul class="about-list">
-      <li>Decades of engineering expertise</li>
-      <li>Client-first service and support</li>
-      <li>Comprehensive training and setup</li>
-    </ul>
-    <a href="#contact" class="btn btn-primary">Request a Quote</a>
-  </div>
+            <h2>About Us</h2>
+            <p>Saffron International is a professional company of high precision machinery products supply,
+              based in Delhi, India, founded with a solid foundation in the industrial machinery sector in the
+              past 18 years. We have established a professional, mature and reliable system to source and
+              supply all kinds of forging equipment products; based on it, it is set up with the pre-sale, in-the
+              sale and after-sale service systems for products with the guarantee of sincere service and
+              professional technologies.</p>
+            <ul class="about-list">
+              <li>Decades of engineering expertise</li>
+              <li>Client-first service and support</li>
+              <li>Comprehensive training and setup</li>
+            </ul>
+            <a href="#contact" class="btn btn-primary">Request a Quote</a>
+          </div>
         </div>
       </div>
     </section>
-
     <section id="services" class="section">
       <div class="container">
         <div class="section-header text-center">
@@ -272,7 +275,6 @@
         </div>
       </div>
     </section>
-
     <section class="section clients-section">
       <div class="container">
         <div class="section-header text-center">
@@ -357,7 +359,8 @@
             <h2>Let's Build Your Next Machine</h2>
             <p>Tell us about your requirements and get a tailored solution from our engineering team.</p>
             <div class="contact-details">
-              <p><i class="fa-solid fa-location-dot"></i> Khasra No. 230 Nangli Sakrawati, Industrial Area, Najafgarh, New Delhi, Delhi 110043</p>
+              <p><i class="fa-solid fa-location-dot"></i> Khasra No. 230 Nangli Sakrawati, Industrial Area, Najafgarh,
+                New Delhi, Delhi 110043</p>
               <p><i class="fa-solid fa-phone"></i> +91 8700335277</p>
               <p><i class="fa-solid fa-envelope"></i> info@saffroninternational.com</p>
             </div>
@@ -387,7 +390,6 @@
       </div>
     </section>
   </main>
-
   <footer class="site-footer">
     <div class="container">
       <div class="row g-4">
@@ -419,7 +421,8 @@
         <div class="col-lg-4 col-md-4">
           <h6>Contact</h6>
           <ul class="footer-contact">
-            <li><i class="fa-solid fa-location-dot"></i> Khasra No. 230 Nangli Sakrawati, Industrial Area, Najafgarh, New Delhi</li>
+            <li><i class="fa-solid fa-location-dot"></i> Khasra No. 230 Nangli Sakrawati, Industrial Area, Najafgarh,
+              New Delhi</li>
             <li><i class="fa-solid fa-phone"></i> +91 8700335277</li>
             <li><i class="fa-solid fa-phone"></i> +91 8178392837</li>
             <li><i class="fa-solid fa-envelope"></i> info@shriyamas.com</li>
@@ -445,4 +448,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
