--- a/wire-bending-machines.html
+++ b/wire-bending-machines.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spring Forming Machines | Saffron International</title>
+  <title>Wire Bending Machines | Saffron International</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -53,6 +53,7 @@
       </div>
     </nav>
   </header>
+
   <main>
     <section class="category-hero">
       <div class="container">
@@ -60,27 +61,28 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html#home">Home</a></li>
             <li class="breadcrumb-item"><a href="index.html#categories">Categories</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Spring Forming Machines</li>
+            <li class="breadcrumb-item active" aria-current="page">Wire Bending Machines</li>
           </ol>
         </nav>
         <div class="category-hero-content">
           <span class="category-kicker">Category</span>
-          <h1>Spring Forming Machines</h1>
-          <p>Precision-built spring forming solutions with reliable performance and consistent output.</p>
+          <h1>Wire Bending Machines</h1>
+          <p>Accurate, repeatable wire bending for complex 3D shapes and reliable production output.</p>
         </div>
       </div>
     </section>
+
     <section class="section">
       <div class="container">
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/1.png" class="card-img-top product-card-image" alt="CNC Spring Forming Machine" />
+              <img src="images/3d-wirebending/1.png" class="card-img-top product-card-image" alt="3D Wire Bending Machine" />
               <div class="card-body">
-                <h5 class="card-title">CNC Spring Forming Machine</h5>
-                <p class="card-text">Model: SI-20 F, SI-35F</p>
+                <h5 class="card-title">3D Wire Bending Machine</h5>
+                <p class="card-text">Model: SFI-3D408R</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/cnc-spring-forming-si-20f-si-35f.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="3d%20wire%20bending%20machine/3d-wire-bending-machine-sfi-3d408r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -88,12 +90,12 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/2.png" class="card-img-top product-card-image" alt="CNC Spring Forming Machine" />
+              <img src="images/3d-wirebending/2.png" class="card-img-top product-card-image" alt="3D Wire Bending Machine" />
               <div class="card-body">
-                <h5 class="card-title">CNC Spring Forming Machine</h5>
-                <p class="card-text">Model: SI-25FR, SI-45 FR</p>
+                <h5 class="card-title">3D Wire Bending Machine</h5>
+                <p class="card-text">Model: SFI-3D413R</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/cnc-spring-forming-si-25fr-si-45fr.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="3d%20wire%20bending%20machine/3d-wire-bending-machine-sfi-3d413r.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
@@ -101,73 +103,35 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/3.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
+              <img src="images/3d-wirebending/3.png" class="card-img-top product-card-image" alt="3D Wire Bending Machine" />
               <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-1025</p>
+                <h5 class="card-title">3D Wire Bending Machine</h5>
+                <p class="card-text">Model: SFI-3D-100-8A, SFI-3D-70-7A</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1025.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="3d%20wire%20bending%20machine/3d-wire-bending-machine-sfi-3d-100-8a-sfi-3d-70-7a.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <!-- <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/forming-machine/4.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
+              <img src="images/forming-machine/4.png" class="card-img-top product-card-image" alt="3D Wire Bending Machine" />
               <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-1225R</p>
+                <h5 class="card-title">3D Wire Bending Machine</h5>
+                <p class="card-text">Model: SFI-3D-100-8A, SFI-3D-70-7A</p>
                 <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1225r.html" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
             </div>
-          </div>               
-          <div class="col-md-6 col-lg-4">
-            <div class="card product-card">
-              <img src="images/forming-machine/5.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
-              <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-1265R</p>
-                <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-1265r.html" class="btn btn-outline-secondary">View Detail</a>
-                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="card product-card">
-              <img src="images/forming-machine/6.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
-              <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-525R</p>
-                <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-525r.html" class="btn btn-outline-secondary">View Detail</a>
-                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="card product-card">
-              <img src="images/forming-machine/7.png" class="card-img-top product-card-image" alt="Spring Forming Machine" />
-              <div class="card-body">
-                <h5 class="card-title">Spring Forming Machine</h5>
-                <p class="card-text">Model: SFI-20</p>
-                <div class="product-actions">
-                  <a href="spring%20-forming/spring-forming-machine-sfi-20.html" class="btn btn-outline-secondary">View Detail</a>
-                  <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
-                </div>
-              </div>
-            </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
   </main>
+
   <footer class="site-footer">
     <div class="container">
       <div class="row g-4">
@@ -204,7 +168,6 @@
             <li><i class="fa-solid fa-phone"></i> +91 8178392837</li>
             <li><i class="fa-solid fa-envelope"></i> info@shriyamas.com</li>
           </ul>
-          
           <div class="footer-social">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
