--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         </div>
       </div>
     </section>
-
     <section id="categories" class="section">
       <div class="container">
         <div class="section-header text-center">
@@ -157,7 +156,6 @@
         </div>
       </div>
     </section>
-
     <section id="about" class="section about-section">
       <div class="container">
         <div class="row align-items-center g-5">
@@ -369,16 +367,16 @@
             <form class="contact-form">
               <div class="row g-3">
                 <div class="col-md-6">
-                  <input type="text" class="form-control" placeholder="Full Name" />
+                  <input type="text" class="form-control" name="name" placeholder="Full Name" />
                 </div>
                 <div class="col-md-6">
-                  <input type="email" class="form-control" placeholder="Email Address" />
+                  <input type="email" class="form-control" name="email" placeholder="Email Address" />
                 </div>
                 <div class="col-12">
-                  <input type="text" class="form-control" placeholder="Subject" />
+                  <input type="text" class="form-control" name="subject"  placeholder="Subject" />
                 </div>
                 <div class="col-12">
-                  <textarea class="form-control" rows="4" placeholder="Message"></textarea>
+                  <textarea class="form-control" rows="4" name="message" placeholder="Message"></textarea>
                 </div>
                 <div class="col-12">
                   <button type="submit" class="btn btn-primary w-100">Send Message</button>
@@ -448,5 +446,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
-
 </html>
