make category page for coiling machine

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <ul class="dropdown-menu product-dropdown">
                 <li><a class="dropdown-item" href="spring-forming-machines.html">Spring Forming Machines</a></li>
                 <li><a class="dropdown-item" href="wire-bending-machines.html">Wire Bending Machines</a></li>
-                <li><a class="dropdown-item" href="#categories">Coiling Machines</a></li>
+                <li><a class="dropdown-item" href="coiling-machines.html">Coiling Machines</a></li>
                 <li><a class="dropdown-item" href="#categories">Special Purpose Machines</a></li>
                 <li><a class="dropdown-item" href="#categories">Grinding Machines / Grinding Wheels</a></li>
                 <li><a class="dropdown-item" href="#categories">Furnace Machines</a></li>
