--- a/coiling-machines.html
+++ b/coiling-machines.html
@@ -78,18 +78,17 @@
 
         <div class="col-md-6 col-lg-4">
             <div class="card product-card">
-              <img src="images/coiling-machine/1.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-690" />
+              <img src="images/coiling-machine/1.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-11250" />
               <div class="card-body">
                 <h5 class="card-title">CNC Spring Making Machine</h5>
                 <p class="card-text">Model: SFI-11250</p>
                 <div class="product-actions">
-                  <a href="#" class="btn btn-outline-secondary">View Detail</a>
+                  <a href="coiling-machines/cnc-spring-making-machine-sfi-11250.html" class="btn btn-outline-secondary">View Detail</a>
                   <a href="index.html#contact" class="btn btn-primary">Enquiry</a>
                 </div>
               </div>
             </div>
           </div>
-
           <div class="col-md-6 col-lg-4">
             <div class="card product-card">
               <img src="images/coiling-machine/2.png" class="card-img-top product-card-image" alt="CNC Spring Making Machine SFI-690" />
@@ -291,7 +290,6 @@
       </div>
     </section>
   </main>
-
   <footer class="site-footer">
     <div class="container">
       <div class="row g-4">
